# oauth2-mock

./: Cargo.toml  Config.yaml  Dockerfile  LICENSE  README.md
src/: config.rs  login_page.html  main.rs
src/api/: info_get.rs  login_get.rs  login_post.rs  mod.rs  token_post.rs
