[package]
name = "google_login_mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = { version="0.6.20", features=["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "~1.0"
uuid = { version = "1.6.1", features = ["v4"]}
config = "0.13.4"
axum-sessions = "0.6.1"
